--- a/index.html
+++ b/index.html
@@ -20,17 +20,23 @@
 	<h1>Rock Paper Scissors Game!</h1>
 	<div class="container">
 		<div class="col-md-6">
-			<h2>Opponent's Choice</h2>
-			<h4><span class="player-wins">Wins: 0</span> <span class="player-losses">Losses: 0</span></h4>
-			<div class="player2-choice player2-rock"><img src="assets/images/rock.png" alt=""></div>
-			<div class="player2-choice player2-paper"><img src="assets/images/paper.png" alt=""></div>
-			<div class="player2-choice player2-scissor"><img src="assets/images/scissors.png" alt=""></div>
+		<div class = "opponent-missing">
+			<h4 class="loading">Waiting on Opponent</h4>
+		</div>
+		<div class="opponent-available">
+			
+		</div>
+			<h2>Opponent</h2>
+			<h4>Wins: <span class="opponent-wins">0</span><div>Losses: <span class="opponent-losses">0</span></div> </h4>
+			<div class="opponent-choice-button opponent-rock"><img src="assets/images/rock.png" alt=""></div>
+			<div class="opponent-choice-button opponent-paper"><img src="assets/images/paper.png" alt=""></div>
+			<div class="opponent-choice-button opponent-scissors"><img src="assets/images/scissors.png" alt=""></div>
 
-			<h2>Your Choice</h2>
-			<h4><span class="player-wins">Wins: 0</span> <span class="player-losses">Losses: 0</span></h4>
-			<button class="player-choice-button" data-value="rock"><img src="assets/images/rock.png" alt=""></button>
-			<button class="player-choice-button" data-value="paper"><img src="assets/images/paper.png" alt=""></button>
-			<button class="player-choice-button" data-value="scissors"><img src="assets/images/scissors.png" alt=""></button>
+			<h2>You</h2>
+			<h4>Wins: <span class="player-wins">0</span> <div>Losses: <span class="player-losses">0</span></div></h4>
+			<button class="player-choice-button player-rock" data-value="rock"><img src="assets/images/rock.png" alt=""></button>
+			<button class="player-choice-button player-paper" data-value="paper"><img src="assets/images/paper.png" alt=""></button>
+			<button class="player-choice-button player-scissor" data-value="scissors"><img src="assets/images/scissors.png" alt=""></button>
 		</div>
 		<div class="col-md-6">
 			<div class="chat-box layout-column">
